fixing header > span alignment

--- a/projects/novo-elements/src/styles/typography.scss
+++ b/projects/novo-elements/src/styles/typography.scss
@@ -146,6 +146,7 @@ h6,
 p,
 span {
   @include base-text-rules();
+  vertical-align: baseline;
 }
 
 span > span {
